TPRUN-8496 Prepare TESB customization branch.

--- a/activemq-pool/pom.xml
+++ b/activemq-pool/pom.xml
@@ -133,7 +133,7 @@
         <inherited>true</inherited>
         <configuration>
           <instructions>
-            <Export-Package>org.apache.activemq.pool*;version=${project.version};-noimport:=true</Export-Package>
+            <Export-Package>org.apache.activemq.pool*;version=${upstream.version};-noimport:=true</Export-Package>
             <Import-Package>
               javax.transaction*;resolution:=optional,
               org.apache.activemq.jms.pool*;resolution:=optional,
