--- a/activemq-amqp/pom.xml
+++ b/activemq-amqp/pom.xml
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>org.apache.activemq.tooling</groupId>
       <artifactId>activemq-joram-jms-tests</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
