--- a/activemq-jms-pool/pom.xml
+++ b/activemq-jms-pool/pom.xml
@@ -110,7 +110,7 @@
         <inherited>true</inherited>
         <configuration>
           <instructions>
-            <Export-Package>org.apache.activemq.jms.pool*;version=${project.version};-noimport:=true</Export-Package>
+            <Export-Package>org.apache.activemq.jms.pool*;version=${upstream.version};-noimport:=true</Export-Package>
             <Import-Package>
               jakarta.jms*;version="[3,4)",
               javax.transaction*;resolution:=optional,
