--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -146,8 +146,8 @@
             </Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
             <Export-Package>
-              org.apache.activemq*;version=${project.version};-noimport:=true;-split-package:=merge-first,
-              org.apache.activemq.web*;version=${project.version};-noimport:=true;-split-package:=merge-first
+              org.apache.activemq*;version=${upstream.version};-noimport:=true;-split-package:=merge-first,
+              org.apache.activemq.web*;version=${upstream.version};-noimport:=true;-split-package:=merge-first
             </Export-Package>
             <Import-Package>
               !org.apache.commons.daemon,
@@ -352,84 +352,84 @@
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-client</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-openwire-legacy</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-jaas</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-broker</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-console</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-spring</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-amqp</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-http</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-mqtt</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-stomp</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-kahadb-store</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>activemq-jdbc-store</artifactId>
-          <version>${project.version}</version>
+          <version>${upstream.version}</version>
           <classifier>sources</classifier>
           <optional>true</optional>
         </dependency>
